--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AbsenceHelper.cs" />
     <Compile Include="Helpers\CalendarHelper.cs" />
     <Compile Include="Helpers\ChatHelper.cs" />
     <Compile Include="Helpers\DateHelper.cs" />
@@ -362,6 +363,115 @@
     <Content Include="bin\totalhr.web.pdb" />
     <Content Include="bin\WebActivatorEx.dll" />
     <Content Include="bin\WebGrease.dll" />
+    <Content Include="Content\assets\bootstrap\css\bootstrap-fileupload.css" />
+    <Content Include="Content\assets\bootstrap\css\bootstrap-responsive.css" />
+    <Content Include="Content\assets\bootstrap\css\bootstrap-responsive.min.css" />
+    <Content Include="Content\assets\bootstrap\css\bootstrap.css" />
+    <Content Include="Content\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\assets\bootstrap\img\glyphicons-halflings-white.png" />
+    <Content Include="Content\assets\bootstrap\img\glyphicons-halflings.png" />
+    <Content Include="Content\assets\bootstrap\js\bootstrap-fileupload.js" />
+    <Content Include="Content\assets\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\assets\css\bootstrap-fileupload.css" />
+    <Content Include="Content\assets\css\bootstrap-responsive.css" />
+    <Content Include="Content\assets\css\bootstrap-responsive.min.css" />
+    <Content Include="Content\assets\css\bootstrap.css" />
+    <Content Include="Content\assets\css\bootstrap.min.css" />
+    <Content Include="Content\assets\fancybox\.gitattributes" />
+    <Content Include="Content\assets\fancybox\demo\1_b.jpg" />
+    <Content Include="Content\assets\fancybox\demo\1_s.jpg" />
+    <Content Include="Content\assets\fancybox\demo\2_b.jpg" />
+    <Content Include="Content\assets\fancybox\demo\2_s.jpg" />
+    <Content Include="Content\assets\fancybox\demo\3_b.jpg" />
+    <Content Include="Content\assets\fancybox\demo\3_s.jpg" />
+    <Content Include="Content\assets\fancybox\demo\4_b.jpg" />
+    <Content Include="Content\assets\fancybox\demo\4_s.jpg" />
+    <Content Include="Content\assets\fancybox\demo\5_b.jpg" />
+    <Content Include="Content\assets\fancybox\demo\5_s.jpg" />
+    <Content Include="Content\assets\fancybox\demo\ajax.txt" />
+    <Content Include="Content\assets\fancybox\demo\iframe.html" />
+    <Content Include="Content\assets\fancybox\demo\index.html" />
+    <Content Include="Content\assets\fancybox\lib\jquery-1.8.2.min.js" />
+    <Content Include="Content\assets\fancybox\lib\jquery.mousewheel-3.0.6.pack.js" />
+    <Content Include="Content\assets\fancybox\source\blank.gif" />
+    <Content Include="Content\assets\fancybox\source\fancybox_loading.gif" />
+    <Content Include="Content\assets\fancybox\source\fancybox_overlay.png" />
+    <Content Include="Content\assets\fancybox\source\fancybox_sprite.png" />
+    <Content Include="Content\assets\fancybox\source\helpers\fancybox_buttons.png" />
+    <Content Include="Content\assets\fancybox\source\helpers\jquery.fancybox-buttons.css" />
+    <Content Include="Content\assets\fancybox\source\helpers\jquery.fancybox-buttons.js" />
+    <Content Include="Content\assets\fancybox\source\helpers\jquery.fancybox-media.js" />
+    <Content Include="Content\assets\fancybox\source\helpers\jquery.fancybox-thumbs.css" />
+    <Content Include="Content\assets\fancybox\source\helpers\jquery.fancybox-thumbs.js" />
+    <Content Include="Content\assets\fancybox\source\jquery.fancybox.css" />
+    <Content Include="Content\assets\fancybox\source\jquery.fancybox.js" />
+    <Content Include="Content\assets\fancybox\source\jquery.fancybox.pack.js" />
+    <Content Include="Content\assets\font-awesome\.gitignore" />
+    <Content Include="Content\assets\font-awesome\css\font-awesome-ie7.min.css" />
+    <Content Include="Content\assets\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\assets\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\css\font-awesome-ie7.min.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\css\font-awesome.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\css\font-awesome.min.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\css\prettify.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\css\site.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\ico\favicon.ico" />
+    <Content Include="Content\assets\font-awesome\docs\assets\img\contribution-sample.png" />
+    <Content Include="Content\assets\font-awesome\docs\assets\img\fort_awesome.jpg" />
+    <Content Include="Content\assets\font-awesome\docs\assets\img\glyphicons-halflings-white.png" />
+    <Content Include="Content\assets\font-awesome\docs\assets\img\glyphicons-halflings.png" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\backbone.min.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\bootstrap-222.min.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\index\index.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\jquery-1.7.1.min.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\prettify.min.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\js\underscore.min.js" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\buttons.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\css-tests.css" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\css-tests.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\forms-responsive.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\forms.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\navbar-fixed-top.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\navbar-static-top.html" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tests\navbar.html" />
+    <Content Include="Content\assets\font-awesome\docs\design.html" />
+    <Content Include="Content\assets\font-awesome\docs\index.html" />
+    <Content Include="Content\assets\font-awesome\docs\test.html" />
+    <Content Include="Content\assets\jquery-ui\images\animated-overlay.gif" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Content\assets\jquery-ui\jquery-ui-1.10.1.custom.min.js" />
+    <Content Include="Content\assets\uniform\css\uniform.default.css" />
+    <Content Include="Content\assets\uniform\demo\demo.html" />
+    <Content Include="Content\assets\uniform\images\bg-input-focus.png" />
+    <Content Include="Content\assets\uniform\images\bg-input.png" />
+    <Content Include="Content\assets\uniform\images\sprite.png" />
+    <Content Include="Content\assets\uniform\jquery.uniform.js" />
+    <Content Include="Content\assets\uniform\jquery.uniform.min.js" />
     <Content Include="Content\css\BeatPicker.min.css" />
     <Content Include="Content\calendar.css" />
     <Content Include="Content\css\calendar.css" />
@@ -417,6 +527,86 @@
     <Content Include="Areas\Admin\Views\TimeRecording\Index.cshtml" />
     <Content Include="Areas\Admin\Views\TimeRecording\RecordTime.cshtml" />
     <Content Include="Areas\Admin\Views\TimeRecording\Search.cshtml" />
+    <Content Include="Content\assets\bootstrap\.DS_Store" />
+    <Content Include="Content\assets\bootstrap\css\.DS_Store" />
+    <Content Include="Content\assets\bootstrap\img\.DS_Store" />
+    <Content Include="Content\assets\bootstrap\js\.DS_Store" />
+    <Content Include="Content\assets\css\.DS_Store" />
+    <Content Include="Content\assets\fancybox\.DS_Store" />
+    <Content Include="Content\assets\fancybox\CHANGELOG.md" />
+    <Content Include="Content\assets\fancybox\README.md" />
+    <Content Include="Content\assets\fancybox\source\.DS_Store" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\fontawesome-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\fontawesome-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\fontawesome-webfont.woff" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\FontAwesome.otf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\museo_slab_300-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\museo_slab_300-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\museo_slab_500-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\museo_slab_500-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\proximanova-sbold-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\proximanova-sbold-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\proximanova-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\docs\assets\font\proximanova-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\img\icon-flag.pdf" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\font-awesome-ie7.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\font-awesome.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\font-site.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\mixins.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\site.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\accordion.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\alerts.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\bootstrap.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\breadcrumbs.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\button-groups.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\buttons.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\carousel.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\close.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\code.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\component-animations.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\dropdowns.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\forms.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\grid.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\hero-unit.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\labels-badges.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\layouts.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\media.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\mixins.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\modals.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\navbar.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\navs.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\pager.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\pagination.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\popovers.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\progress-bars.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\reset.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive-1200px-min.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive-767px-max.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive-768px-979px.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive-navbar.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive-utilities.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\responsive.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\scaffolding.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\sprites.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tables.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\thumbnails.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\tooltip.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\type.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\utilities.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\variables.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\twbs-222\wells.less" />
+    <Content Include="Content\assets\font-awesome\docs\assets\less\variables.less" />
+    <Content Include="Content\assets\font-awesome\font\fontawesome-webfont.eot" />
+    <Content Include="Content\assets\font-awesome\font\fontawesome-webfont.ttf" />
+    <Content Include="Content\assets\font-awesome\font\fontawesome-webfont.woff" />
+    <Content Include="Content\assets\font-awesome\font\FontAwesome.otf" />
+    <Content Include="Content\assets\font-awesome\less\font-awesome-ie7.less" />
+    <Content Include="Content\assets\font-awesome\less\font-awesome.less" />
+    <Content Include="Content\assets\font-awesome\README.md" />
+    <Content Include="Content\assets\font-awesome\sass\font-awesome.sass" />
+    <Content Include="Content\assets\font-awesome\sass\font-awesome.scss" />
+    <Content Include="Content\assets\uniform\.DS_Store" />
+    <Content Include="Content\assets\uniform\README.textile" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
@@ -432,6 +622,7 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\Site\Absence.js" />
     <Content Include="Scripts\Site\angular-form-gen.js" />
     <Content Include="Scripts\Site\assets\bootstrap-colorpicker\css\colorpicker.css" />
     <Content Include="Scripts\Site\assets\bootstrap-colorpicker\img\alpha.png" />
@@ -1629,6 +1820,7 @@
     <Content Include="Views\Payroll\Index.cshtml" />
     <Content Include="Views\Absence\Index.cshtml" />
     <Content Include="Views\Task\Index.cshtml" />
+    <Content Include="Views\Absence\CreateAbsence.cshtml" />
     <None Include="Web.AliceLaptop.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1654,6 +1846,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AbsencesService\Absences.csproj">
+      <Project>{59271b24-7ec8-41ce-8025-1db94ed60346}</Project>
+      <Name>Absences</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Authentication\Authentication.csproj">
       <Project>{ed4d8ec1-24a9-4e53-9d27-9cfd86aaa6cf}</Project>
       <Name>Authentication</Name>
