--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Infrastructure\ICacheHelper.cs" />
     <Compile Include="Models\Attributes\AlwaysTrueAttribute.cs" />
     <Compile Include="Models\FormInfo.cs" />
+    <Compile Include="Models\GalleryAlbumInfo.cs" />
+    <Compile Include="Models\GalleryPhotoInfo.cs" />
     <Compile Include="Models\ListItemStruct.cs" />
     <Compile Include="Models\LoginStruct.cs" />
     <Compile Include="Models\NewEmployeeInfo.cs" />
