--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Areas\Admin\Controllers\DepartmentController.cs" />
     <Compile Include="Areas\Admin\Controllers\DocumentController.cs" />
     <Compile Include="Areas\Admin\Controllers\FormEditorController.cs" />
+    <Compile Include="Areas\Admin\Controllers\GalleryController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\TimeRecordingController.cs" />
     <Compile Include="Areas\Admin\Models\BreadCrumbItem.cs" />
@@ -1861,6 +1862,7 @@
     <Content Include="Views\Gallery\CreateAlbum.cshtml" />
     <Content Include="Views\Gallery\EditAlbum.cshtml" />
     <Content Include="Views\Gallery\ViewAlbum.cshtml" />
+    <Content Include="Views\Gallery\UploadPhoto.cshtml" />
     <None Include="Web.AliceLaptop.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
